--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
   /* overflow: hidden; */
   font-family: "Main";
   overflow-y: auto;
+  background-color: #212121;
 }
 
 /* header-css */
@@ -28,8 +29,9 @@ header {
 }
 
 h1 {
-  font-family: "Great Vibes", cursive;
+  font-family: "Main";
 }
+
 p {
   font-family: "Main";
   font-size: 15px;
@@ -38,11 +40,11 @@ p {
 
 header .wrapper nav {
   background-color: rgb(244, 239, 239);
-  margin-left: 100px;
-  margin-right: 100px;
   font-family: "Main";
   font-size: larger;
-  width: auto;
+  margin-left: 12%;
+  margin-right: 12%;
+  
 }
 
 .inline-block a {
@@ -55,11 +57,14 @@ header .wrapper nav {
 
 header nav {
   display: block;
-  background-color: #ffffff;
-  border-radius: 10px;
+  background-color: #ce3b3b;
+  /* border-radius: 10px; */
   margin-top: 15px;
-  padding: 0;
+  /* padding-top: 1%;
+  padding-bottom: 1%; */
 }
+
+
 
 header nav li {
   display: inline-block;
@@ -81,9 +86,33 @@ header nav li.selected a {
   background-color: #cb3018;
   color: #ffffff;
   text-decoration: none;
+  font-weight: bolder;
 }
 
 /* google animation-css*/
+
+
+@-ms-keyframes spin {
+  from { -ms-transform: rotate(0deg); }
+  to { -ms-transform: rotate(360deg); }
+}
+@-moz-keyframes spin {
+  from { -moz-transform: rotate(0deg); }
+  to { -moz-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+  from { -webkit-transform: rotate(0deg); }
+  to { -webkit-transform: rotate(360deg); }
+}
+@keyframes spin {
+  from {
+      transform:rotate(0deg);
+  }
+  to {
+      transform:rotate(360deg);
+  }
+}
+
 .wrapper2 {
   position: relative;
   padding: 250px 200px 150px 200px;
@@ -99,6 +128,7 @@ header nav li.selected a {
   height: 12.5em;
   position: absolute;
   width: 12.5em;
+ 
 }
 
 .circle {
@@ -107,11 +137,16 @@ header nav li.selected a {
   left: calc(50% - 6.25em);
   top: calc(50% - 12.5em);
   transform-origin: 50% 12.5em;
+
+
 }
 
 .one {
   background: rgba(16, 63, 236, 0.75);
   transform: rotateZ(225deg);
+ 
+ 
+ 
 }
 .two {
   background: rgba(37, 172, 162, 0.75);
@@ -120,26 +155,32 @@ header nav li.selected a {
 .three {
   background: rgba(233, 124, 32, 0.75);
   transform: rotateZ(135deg);
+ 
 }
 .four {
   background: rgba(235, 67, 35, 0.75);
   transform: rotateZ(90deg);
+ 
 }
 .five {
   background: rgba(190, 28, 65, 0.75);
   transform: rotateZ(45deg);
+ 
 }
 .six {
   background: rgba(208, 57, 159, 0.75);
   transform: rotateZ(0);
+  
 }
 .seven {
   background: rgba(150, 32, 198, 0.75);
   transform: rotateZ(-45deg);
+  
 }
 .eight {
   background: rgba(95, 33, 203, 0.75);
   transform: rotateZ(-90deg);
+  animation: infinite-spinning;
 }
 
 /* aboutme-css */
@@ -159,7 +200,7 @@ header nav li.selected a {
   margin: 0;
   padding-top: 20px;
   padding-left: 200px;
-  font-family: "Great Vibes", cursive;
+  font-family: "Main";
   font-size: 30px;
   font-weight: bold;
   color: #ffffff;
@@ -167,7 +208,7 @@ header nav li.selected a {
 
 .aboutme p {
   margin: 20px 200px 20px 200px;
-  text-align: center;
+  text-align: left;
   font-size: 18px;
 }
 .aboutme p a {
@@ -175,7 +216,7 @@ header nav li.selected a {
 }
 .mail {
   color: #ff644e;
-  text-decoration: underline;
+  text-decoration: none;
 }
 /* #skills-css */
 /* .skills {
@@ -195,6 +236,85 @@ header nav li.selected a {
   height: 500px;
   width: 250px;
 } */
+ .skills{
+  text-align: left;
+  background-color: #212121;
+  padding: 20px 200px 20px 200px;;
+  color: #ffffff;
+
+ }
+ .skills:hover{
+   background-color: black;
+ }
+ .skills-flex{
+   display: flex;
+   flex-direction: row;
+   padding-top: 5%;
+ }
+
+ .flex{
+   width: 25%;
+   border: 2px solid #d4c4c2;
+   text-align: center;
+   padding-top: 3%;
+   padding-bottom:3% ;
+   background: linear-gradient(to bottom right, #ff644e, #cb3018);
+   font-weight: bolder;
+   
+ }
+
+ .flex:hover{
+   background: black;
+   color: #cb3018;
+ }
+
+
+
+
+
+
+
+
+
+.portfolio{
+  /* margin: 0px 0px 0px 200px; */
+  text-align: left;
+  font-size: 18px;
+  background-color: #212121;
+  padding: 20px 200px 20px 200px;;
+}
+
+.portfolio:hover {
+  background-color: black;
+}
+
+.portfolio h1{
+  color: white;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+.card{
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom right, #ff644e, #cb3018);
+  color: #ffffff;
+}
+.card-title{
+  font-size: 25px;
+  font-weight: bolder;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 section {
   background-color: #212121;
@@ -206,18 +326,25 @@ section:hover {
   background-color: black;
 }
 
+
 .col-sm-10 button {
   background-color: #ff644e;
   font-family: "Main";
   color: #ffffff;
-  padding-left: 50px;
-  padding-right: 50px;
-  margin-left: 300px;
+  margin-left: 50%;
+  /* padding-left: 50px;
+  padding-right: 50px; */
+  /* margin-left: 300px; */
 }
 .col-sm-10 button:hover {
   background-color: #cb3018;
   color: #ffffff;
 }
+
+form {
+  margin-left: -1.3%;
+}
+
 
 footer {
   margin-top: 0px;
@@ -229,3 +356,4 @@ footer {
   font-size: bold;
   margin-bottom: 0;
 }
+
