--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,12 @@ header {
   text-align: center;
 }
 
-h1 {
+.wrapper h1 {
   font-family: "Main";
+  text-shadow: 4px 4px 10px rgb(0, 0, 0);
+  -webkit-animation: pulse linear .5s infinite;
+	animation: pulse linear .5s infinite;  
+
 }
 
 p {
@@ -45,12 +49,6 @@ header .wrapper nav {
   margin-left: 12%;
   margin-right: 12%;
   
-}
-
-.wrapper h1{
-  -webkit-animation: pulse linear .5s infinite;
-	animation: pulse linear .5s infinite;  
-
 }
 
 
@@ -70,25 +68,15 @@ header .wrapper nav {
 .inline-block a {
   color: white;
   text-decoration: underline;
-  font-size: 25px;
-	-webkit-animation: flash linear 1s infinite;
-	animation: flash linear 1s infinite;
-  
+  font-size: 20px;
+
 }
 
-@-webkit-keyframes flash {
-	0% { opacity: 1; } 
-	50% { opacity: .1; } 
-	100% { opacity: 1; }
-}
-@keyframes flash {
-	0% { opacity: 1; } 
-	50% { opacity: .1; } 
-	100% { opacity: 1; }
-}
 
 .inline-block a:hover {
   color: white;
+  font-weight: bolder;
+  color: black
 }
 
 header nav {
@@ -237,12 +225,13 @@ header nav li.selected a {
   flex-direction: row;
   padding-left: 200px;
 }
-.flex1{
+.flex1 {
     width: 10%;
-    margin-right:5% ;
-    opacity: 1;
+    margin-right: 10% ;
+    /* opacity: 1;
     transition: .5s ease;
-    backface-visibility: hidden;
+    backface-visibility: hidden;  */
+     
     
 }
 
@@ -283,17 +272,6 @@ header nav li.selected a {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
 .flex2{
   width: 90%;
 }
@@ -310,6 +288,7 @@ header nav li.selected a {
   font-size: 30px;
   font-weight: bold;
   color: #ffffff;
+  text-shadow: 4px 4px 10px #FF0000;
 }
 
 .aboutme p {
@@ -352,6 +331,11 @@ header nav li.selected a {
  .skills:hover{
    background-color: black;
  }
+
+ .skills h1{
+  text-shadow: 4px 4px 10px #FF0000;
+ }
+
  .skills-flex{
    display: flex;
    flex-direction: row;
@@ -372,6 +356,8 @@ header nav li.selected a {
  .flex:hover{
    background: black;
    color: #cb3018;
+   width: 35%;
+   font-weight: bolder;
    
  }
 
@@ -399,13 +385,24 @@ header nav li.selected a {
   color: white;
   padding-top: 2%;
   padding-bottom: 2%;
+  text-shadow: 4px 4px 10px #FF0000;
+  
 }
 
 .card{
-  width: 100%;
+  width: 90%;
   height: 100%;
   background: linear-gradient(to bottom right, #ff644e, #cb3018);
   color: #ffffff;
+  font-weight: 500;
+}
+
+.card:hover{
+  -webkit-animation: pulse linear .5s infinite;
+  animation: pulse linear .5s infinite; 
+  width: 105%; 
+
+  
 }
 .card-title{
   font-size: 25px;
@@ -423,6 +420,8 @@ header nav li.selected a {
   color: white;
   margin-top: 6%;
   box-shadow: none;
+  border: none;
+
 }
 
 
@@ -453,10 +452,12 @@ header nav li.selected a {
 
 #project1:hover{
   background-color: #cb3018;
-  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+  /* animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
   transform: translate3d(0, 0, 0);
   backface-visibility: hidden;
-  perspective: 1000px;
+  perspective: 1000px; */
+  border: none;
+  text-decoration: underline;
  
 }
 
@@ -475,7 +476,9 @@ header nav li.selected a {
 }
 
 
-
+.contact h1{
+  text-shadow: 4px 4px 10px #FF0000;
+}
 
 
 section {
