--- a/css/style.css
+++ b/css/style.css
@@ -57,8 +57,11 @@
 }
 .palace{
   margin-top: -8%;
-  padding-left: 30%;
+  object-fit: contain;
   margin-bottom: -4%;
+  justify-content: center;
+  padding-left: 30%;
+  
 }
 
 
