--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,8 @@ h3{
 
 .container-fluid4{
   padding-top: 8%;
-  /* padding-left: 25%; */
+  padding-right: 8%;
+  padding-left: 5%;
   text-align: center;
 }
 
@@ -140,6 +141,7 @@ h3{
   width: 100%;
   text-align: center;
   padding-bottom: 5%;
+  
   
 
 }
