--- a/css/style.css
+++ b/css/style.css
@@ -57,11 +57,22 @@
   margin-top: -10%;
 }
 #palace{
-  margin-top: -4%;
+  margin-top: 1% ;
   object-fit: contain;
   margin-bottom: -5%;
   justify-content: center;
   /* padding-right: 15%; */
+  
+}
+#flagP1{
+  padding-top: 30%;
+  margin-right: -3%;
+ 
+  
+}
+#flagP2{
+  padding-top: 30%;
+  margin-left: -4.3%;
   
 }
 
@@ -163,7 +174,8 @@ h3{
   text-align: center;
   padding-top: 5%;
   background-color: white;
-  font-style: 'EB Garamond', serif;
+  /* font-style: 'EB Garamond', serif; */
+  font-family: 'Open Sans Condensed', sans-serif;
   padding-bottom: 4%;
 
 }
@@ -171,10 +183,13 @@ h3{
 .container-fluid3 h2{
   font-size: 50px;
   color: #1F826B;
+ 
 }
 
 
 .container-fluid3 h3{
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 25px;
 
 }
 
