--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   padding-top: 1%;
   color: #4AB19A;
   font-family: 'EB Garamond', serif;
+  /* margin-bottom: -3%; */
  
 }
 
@@ -49,7 +50,7 @@
 
 #cloud1{
   margin-left: 50%;
-  margin-top: -3%;
+  /* margin-top: -3%; */
 }
 #cloud2{
   margin-right: 50%;
@@ -57,7 +58,7 @@
   margin-top: -10%;
 }
 #palace{
-  margin-top: 2% ;
+  /* margin-top: -6% ; */
   object-fit: contain;
   margin-bottom: -5%;
   justify-content: center;
@@ -66,17 +67,16 @@
 }
 #flagP1{
 
-  padding-top: 31%;
+  padding-top: 24%;
   margin-right: -5.5%;
- 
- 
+  /* margin-bottom: -9%; */
   
 }
+
 #flagP2{
-  padding-top: 31%;
+  padding-top: 24%;
   margin-left: -4.3%;
- 
-  
+  /* margin-bottom: -9%; */
 }
 
 
