--- a/css/style.css
+++ b/css/style.css
@@ -322,9 +322,54 @@ font-family: 'Roboto', sans-serif; */
 
 .container-fluid7{
   width: 70%;
-  background-color: #E0EBE7;
-  padding-left: 10%;
+  background-color: rgb(54, 206, 143);
+  padding-left: 8%;
   padding-right: 10%;
   margin-left: 15%;
   text-align: center;
+  padding-top: 5%;
+  
+ 
+}
+
+.container-fluid7 h2{
+  font-size: 50px;
+  color: white;
+  font-family: 'EB Garamond', serif;
+}
+
+.icon-container{
+  font-size: 600%;
+  color: white;
+  width: 900%;
+  padding-left: 1%;
+}
+
+.skills{
+  font-size: 25px;
+  color: white;
+  padding-top: 20%;
+  margin-left: -30%;
+
+}
+
+.icons{
+  /* display: flex;
+  flex-direction: column; */
+  padding-top: 5%;
+  display: flex;
+  flex-direction: row;
+  
+
+}
+.test{
+  height: 50%;
+  display: flex;
+}
+.skills2{
+  font-size: 25px;
+  color: white;
+  padding-top: 28%;
+  margin-left: -30%;
+
 }
