--- a/css/style.css
+++ b/css/style.css
@@ -329,6 +329,7 @@ font-family: 'Roboto', sans-serif; */
   text-align: center;
   padding-top: 5%;
   
+  
  
 }
 
@@ -338,38 +339,87 @@ font-family: 'Roboto', sans-serif; */
   font-family: 'EB Garamond', serif;
 }
 
-.icon-container{
-  font-size: 600%;
+.icon-flex{
+  display: flex;
+  flex-direction: column;
+  /* height: 100%;
+  width: 100%; */
+
+
+}
+
+.icon-flex1{
+  height: 50%;
+  /* background-color: khaki; */
+  display: flex;
+  flex-direction: row;
+  padding: 2%;
+  padding-top: 10%;
+
+}
+.icons{
+  width: 30%;
+  height: 30%;
+}
+
+.icon-flex2{
+  height: 50%;
+  /* background-color: rgb(140, 240, 140); */
+  display: flex;
+  flex-direction: row;
+  padding: 2%;
+  padding-top: 10%;
+  padding-bottom: 15%;
+  padding-left: 2%;
+  
+}
+
+.iconsId{
   color: white;
-  width: 900%;
-  padding-left: 1%;
+  font-size: 55px;
 }
 
 .skills{
-  font-size: 25px;
   color: white;
-  padding-top: 20%;
-  margin-left: -30%;
-
-}
-
-.icons{
-  /* display: flex;
-  flex-direction: column; */
-  padding-top: 5%;
-  display: flex;
-  flex-direction: row;
+  font-size: 25px;
   
 
 }
-.test{
-  height: 50%;
-  display: flex;
+
+
+
+@media only screen and (max-width: 1240px) and (min-width: 599px) {
+  .iconsId{
+    color: white;
+    font-size: 60px;
+  }
+  
+  .skills{
+    color: white;
+    font-size: 25px;
+    
+  }
+  
 }
-.skills2{
-  font-size: 25px;
-  color: white;
-  padding-top: 28%;
-  margin-left: -30%;
+
+
+
+@media only screen and (max-width: 600px) {
+  
+  .icons{
+    width: 30%;
+    height: 30%;
+  }
+
+  .iconsId{
+    color: white;
+    font-size: 40px;
+  }
+  .skills{
+    color: white;
+    font-size: 12px;
+    
+  
+  }
 
 }
