--- a/css/style.css
+++ b/css/style.css
@@ -114,13 +114,40 @@ h3{
   padding-top: 1%;
   font-family: 'EB Garamond', serif;
   font-size: 20px;
+  width: 40%;
+  text-align: center;
+  justify-content: center;
+  margin-left: 30%;
 }
+
+@media only screen and (max-width: 1240px) and (min-width: 600px) {
+
+}
+
+
+@media only screen and (max-width: 601px){
+  .container-fluid2 p{
+    color: #545454;
+    padding-top: 1%;
+    font-family: 'EB Garamond', serif;
+    font-size: 20px;
+    width: 100%;
+    text-align: center;
+  
+    margin-left: -5%;
+   
+    
+  }
+
+}
+
 
 .container-fluid4{
   padding-top: 8%;
   padding-right: 8%;
   padding-left: 5%;
   text-align: center;
+  font-size: 40px;
 }
 
 .container-fluid4 h2{
@@ -176,7 +203,7 @@ h3{
   
 }
 
-@media only screen and (max-width: 1240px) and (min-width: 599px) {
+@media only screen and (max-width: 1240px) and (min-width: 600px) {
 
   .flex1{
     display: flex;
@@ -185,7 +212,7 @@ h3{
     text-align: justify;
     padding-bottom: 5%;
     padding-left: 20%;
-    font-size: 18px;
+    font-size: 20px;
   }
   
   
@@ -204,7 +231,7 @@ h3{
     width: 85%;
     text-align: justify;
     padding-bottom: 5%;
-    font-size: 18px;
+    font-size: 20px;
     
     
   
@@ -222,17 +249,26 @@ h3{
 
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 601px) and (min-width: 400px) {
 
+  .container-fluid4{
+    padding-top: 8%;
+    padding-right: 8%;
+    padding-left: 5%;
+    text-align: center;
+  
+  }
+  
 
   .flex1{
     display: flex;
     flex-direction: row;
     width: 100%;
     text-align: justify;
-    padding-bottom: 5%;
+    padding-bottom: 10%;
     padding-left: 10%;
-    font-size: 18px;
+    
+    
   }
 
   .flex1 h3{
@@ -241,7 +277,7 @@ h3{
   }
 
   .div{
-    width: 10%;
+    width: 5%;
   }
 
   
@@ -249,9 +285,11 @@ h3{
     display: flex;
     flex-direction: column;
     padding-left: 10%;
-    width: 100%;
+    width: 95%;
     font-family: 'EB Garamond', serif;
     text-align: justify;
+    
+    
   }
   
   
@@ -261,7 +299,7 @@ h3{
     width: 100%;
     text-align: justify;
     padding-bottom: 5%;
-    font-size: 18px;
+    font-size: 30px;
     text-align: justify;
 
   
@@ -273,7 +311,7 @@ h3{
   }
 
   .div{
-    width: 10%;
+    width: 5%;
   }
 
 
@@ -281,9 +319,10 @@ h3{
     display: flex;
     flex-direction: column;
     padding-right: 10%;
-    width: 100%;
+    width: 95%;
     padding-left: 10%;
     font-family: 'EB Garamond', serif;
+    
   }
   
   
@@ -364,13 +403,14 @@ h3{
     padding-top: 3%;
     padding-bottom: 3%;
     font-family: 'EB Garamond', serif;
-    font-size: 16px;
+    font-size: 18px;
     text-align: center;
+    
   }
   
   .container-fluid3 button{
-    border-radius: 5%;
-    padding: 3% 15% 3% 15%;
+  
+    padding: 3% 27% 3% 27%;
     color: rgb(10, 41, 34);
     background-color: #4AB19A;
     
@@ -389,7 +429,7 @@ h3{
 }
 
 .container-fluid5 img{
-  border-radius: 50%;
+  border-radius: 100%;
   background-color: #F5F9F8;
 }
 
@@ -421,8 +461,9 @@ h3{
 
 @media only screen and (max-width: 600px) {
   #para{
-    width: 80%;
-    padding-left: 20%;
+    width: 100%;
+    padding-left: 5%;
+    padding-right: 5%;
     text-align: center;
   
   }
