--- a/css/style.css
+++ b/css/style.css
@@ -40,12 +40,14 @@
 .container-fluid h2{
   font-size: 70px;  
   font-family: 'Great Vibes', cursive;
+  margin-bottom: -10%;
 }
 
 .container-fluid p{
   font-size: 22px;
-  padding-top: 1%;
+  padding-top: 12%;
   font-family: 'EB Garamond', serif;
+  
 }
 
 #cloud1{
@@ -69,14 +71,14 @@
 
   padding-top: 24%;
   margin-right: -5.5%;
-  /* margin-bottom: -9%; */
-  
+
 }
 
 #flagP2{
   padding-top: 24%;
   margin-left: -4.3%;
-  /* margin-bottom: -9%; */
+
+ 
 }
 
 
@@ -97,6 +99,13 @@
   background-color: white;
 }
 
+.container-fluid2 h2{
+  font-size: 40px;
+  padding-top: 3%;
+  color: #4AB19A;
+  font-family: 'EB Garamond', serif;
+}
+
 #avatar{
   border-radius: 50%;
   background-color: #F3F2F1;
@@ -105,6 +114,7 @@
 h3{
   font-size: 20px;
   padding-top: 3%;
+  padding-bottom: 5%;
   color: #4AB19A;
   font-family: 'EB Garamond', serif;
 
@@ -177,6 +187,7 @@ h3{
   display: flex;
   flex-direction: column;
   padding-left: 30%;
+
   width: 70%;
   font-family: 'EB Garamond', serif;
 }
@@ -426,6 +437,10 @@ h3{
   padding-top: 5%;
   padding-bottom: 5%;
 
+}
+
+.container-fluid5 p{
+  font-size: 17px;
 }
 
 .container-fluid5 img{
