--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,16 @@
   padding-left: 40%;
 
 }
+@media only screen and (max-width: 575px) {
+  .nav-ul{
+    padding-left: 40%;
+  
+  }
+
+
+}
+
+
 
 .navbar-brand{
   padding-left: 20%;
@@ -158,7 +168,10 @@ h3{
   padding-left: 5%;
   text-align: center;
   font-size: 40px;
+  display: flex;
+  flex-direction: column;
 }
+
 
 .container-fluid4 h2{
   font-size: 45px;
@@ -171,98 +184,125 @@ h3{
    
 }
 
-
 .flex1{
+  height: 30%;
+  /* background-color: lawngreen; */
   display: flex;
   flex-direction: row;
-  width: 85%;
-  text-align: justify;
-  padding-bottom: 5%;
-  padding-left: 20%;
-  font-size: 18px;
+  padding-bottom: 4%;
+
+}
+.flex1-1{
+  width: 25%;
+
+}
+.flex1-2{
+  width: 75%;
+ 
 }
 
-
-.flex1-1{
-  display: flex;
-  flex-direction: column;
-  padding-left: 30%;
-
-  width: 70%;
-  font-family: 'EB Garamond', serif;
+.flex1-2 p{
+  font-size: 18px;
 }
 
 
 .flex2{
+  height: 30%;
+  /* background-color: lightcoral; */
   display: flex;
   flex-direction: row;
-  width: 85%;
-  text-align: justify;
-  padding-bottom: 5%;
-  font-size: 18px;
-  
-  
 
 }
+
+
 .flex2-1{
-  display: flex;
-  flex-direction: column;
-  padding-right: 20%;
-  width: 70%;
-  padding-left: 20%;
-  font-family: 'EB Garamond', serif;
-  
+  width: 75%;
+
 }
+.flex2-2{
+  width: 25%;
+ 
+}
+
+.flex2-1 p{
+  font-size: 18px;
+}
+
+
+
+
+
+
+
 
 @media only screen and (max-width: 1240px) and (min-width: 600px) {
-
   .flex1{
+    width: 100%;
+    height: 30%;
+    /* background-color: lawngreen; */
     display: flex;
     flex-direction: row;
-    width: 85%;
-    text-align: justify;
-    padding-bottom: 5%;
-    padding-left: 20%;
-    font-size: 20px;
+    padding-bottom: 4%;
+  
+  }
+  .flex1-1{
+    width: 25%;
+  
+  }
+  .flex1-1 img{
+    width: 25%;
+    padding: 10%;
+   
+  
+  }
+
+  .flex1-2{
+    width: 75%;
+  
+   
   }
   
-  
-  .flex1-1{
-    display: flex;
-    flex-direction: column;
-    padding-left: 30%;
-    width: 70%;
-    font-family: 'EB Garamond', serif;
+  .flex1-2 p{
+    font-size: 18px;
+    text-align: center;
+    
   }
   
   
   .flex2{
+    height: 30%;
+    /* background-color: lightcoral; */
     display: flex;
     flex-direction: row;
-    width: 85%;
-    text-align: justify;
-    padding-bottom: 5%;
-    font-size: 20px;
-    
-    
   
   }
+  
+  
   .flex2-1{
-    display: flex;
-    flex-direction: column;
-    padding-right: 20%;
-    width: 70%;
-    padding-left: 20%;
-    font-family: 'EB Garamond', serif;
-    
+    width: 75%;
+  
   }
+  .flex2-2{
+    width: 25%;
+   
+  }
+  
+  .flex2-1 p{
+    font-size: 18px;
+    text-align: center;
+  }
+  
+  
+  
+  
+  
   
 
 }
 
 @media only screen and (max-width: 601px) and (min-width: 400px) {
 
-  .container-fluid4{
+  /* .container-fluid4{
     padding-top: 8%;
     padding-right: 8%;
     padding-left: 5%;
@@ -319,9 +359,9 @@ h3{
   .flex2 h3{
     font-size: 20px;
     font-weight: bold;
-  }
+  } */
 
-  .div{
+  /* .div{
     width: 5%;
   }
 
@@ -335,7 +375,7 @@ h3{
     font-family: 'EB Garamond', serif;
     
   }
-  
+   */
   
 }
 
@@ -370,10 +410,12 @@ h3{
 
 
 .container-fluid3 p{
-  padding-top: 3%;
+  /* padding-top: 3%; */
   padding-bottom: 3%;
   font-family: 'EB Garamond', serif;
-  font-size: 18px;
+  font-size: 20px;
+  width: 70%;
+  padding-left: 30%;
 }
 
 .container-fluid3 button{
@@ -393,14 +435,16 @@ h3{
 
 @media only screen and (max-width: 1240px) and (min-width: 599px) {
   .container-fluid3 p{
-    padding-top: 3%;
+    /* padding-top: 3%; */
     padding-bottom: 3%;
     font-family: 'EB Garamond', serif;
     font-size: 18px;
+   
+
   }
 
   .container-fluid3 button{
-    border-radius: 5%;
+    /* border-radius: 5%; */
     padding: 1% 2% 1% 2%;
     color: rgb(9, 67, 53);
     background-color: #4AB19A;
@@ -411,11 +455,14 @@ h3{
 
 @media only screen and (max-width: 600px) {
   .container-fluid3 p{
-    padding-top: 3%;
+    /* padding-top: 3%; */
     padding-bottom: 3%;
     font-family: 'EB Garamond', serif;
     font-size: 18px;
     text-align: center;
+    width: 100%;
+    margin-left: -15%;
+    
     
   }
   
