--- a/css/style.css
+++ b/css/style.css
@@ -17,14 +17,14 @@
 }
  @media only screen and (max-width: 680px) and (min-width: 350px){ 
   .nav-ul{
-    padding-left: 15%;
+    padding-left: 40%;
     display: inline-block;
    
   
   }
 
   .navbar-brand{
-    padding-left: 0%;
+    margin-left: 0%;
   }
 
   .nav-link{
