--- a/css/style.css
+++ b/css/style.css
@@ -39,13 +39,13 @@
     font-size: 50px;
   }
   #flag1{
-    margin-left: -2%;
+   
 
   }
 
   #flag2{
     /* margin-right: -20%; */
-    margin-right: -2%;
+   
   }
 
 }
@@ -137,10 +137,13 @@
 }
 
 .container-fluid2 h2{
-  font-size: 40px;
+  font-size: 48px;
   padding-top: 3%;
   color: #4AB19A;
-  font-family: 'EB Garamond', serif;
+  font-family: 'Great Vibes', cursive;
+
+  /* font-family: 'EB Garamond', serif; */
+  font-weight: 300;
 }
 
 #avatar{
@@ -446,8 +449,7 @@ h3{
   text-align: center;
   padding-top: 5%;
   background-color: white;
-  /* font-style: 'EB Garamond', serif; */
-  font-family: brandon-grotesque,HelveticaNeue-Light,"Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
+  font-style: 'EB Garamond', serif;
   padding-bottom: 4%;
 
 }
@@ -455,12 +457,14 @@ h3{
 .container-fluid3 h2{
   font-size: 50px;
   color: #1F826B;
+  font-weight: 300;
+  font-family: 'EB Garamond', serif;
  
 }
 
 
 .container-fluid3 h3{
-  font-family: brandon-grotesque,HelveticaNeue-Light,"Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
+  font-family: 'EB Garamond', serif;
   font-size: 25px;
 
 }
@@ -656,13 +660,16 @@ font-family: 'Roboto', sans-serif; */
 }
 
 .container-fluid7{
-  width: 100%;
-  background-color: #4AB19A;
+  width: 60%;
+  background-image: linear-gradient(to bottom right,#4AB19A, #AAF3A7);
+  
+  /* background-color: #4AB19A; */
   padding-left: 8%;
   padding-right: 10%;
   /* margin-left: 15%; */
   text-align: center;
   padding-top: 15%;
+  margin-left: 20%;
   
   
  
@@ -671,7 +678,11 @@ font-family: 'Roboto', sans-serif; */
 .container-fluid7 h2{
   font-size: 50px;
   color: white;
-  font-family: 'EB Garamond', serif;
+  /* font-family: 'EB Garamond', serif; */
+  font-family: 'Great Vibes', cursive;
+
+  margin-top: -15%;
+
 }
 
 .icon-flex{
@@ -712,6 +723,11 @@ font-family: 'Roboto', sans-serif; */
 .iconsId{
   color: white;
   font-size: 55px;
+  transition: width 2s;
+  transition-timing-function: ease-in;
+
+
+
 }
 
 .skills{
@@ -719,7 +735,7 @@ font-family: 'Roboto', sans-serif; */
   font-size: 25px;
 }
 #noteh3{
-  padding-bottom: 10%;
+  padding-bottom: 7%;
 }
 
 
