--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@
 .container-fluid h2{
   font-size: 70px;  
   font-family: 'Great Vibes', cursive;
-  margin-bottom: -10%;
+  margin-bottom: -5%;
 }
 
 .container-fluid p{
@@ -727,7 +727,7 @@ font-family: 'Roboto', sans-serif; */
   color: white;
   font-size: 55px;
   transition: width 2s;
-  transition-timing-function: ease-in;
+  /* transition-timing-function: ease-in; */
 
 
 
