--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,15 @@
 .nav-ul{
   padding-left: 40%;
   display: inline;
-
+  
+  
+ 
 }
+
+
  @media only screen and (max-width: 600px) and (min-width: 350px){ 
   .nav-ul{
-    padding-left: 40%;
+    padding-left: 20%;
     display: inline-block;
     font-size: 12px;
    
@@ -29,10 +33,17 @@
     margin-left: -15%;
   }
 
+  /* .nav-ul > .navbar-nav > .nav-item{
+    padding-right: 2%;
+  
+  } */
+
+
   .nav-link{
     color: #4AB19A;
     font-size: 12px;
     font-family: 'EB Garamond', serif;
+    
   }
   
   .container-fluid h2{
@@ -60,6 +71,7 @@
   color: #4AB19A;
   font-size: 22px;
   font-family: 'EB Garamond', serif;
+  
 }
 
 .navbar-brand img {
@@ -67,6 +79,13 @@
   background-color: #F5F9F8;
 }
 
+
+.nav-ul > .navbar-nav > .nav-item{
+  /* margin-right: 10%; */
+  padding-right: 10%;
+
+}
+        
 
 
 .container-fluid{
