--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,13 @@
 
  @media only screen and (max-width: 600px) and (min-width: 350px){ 
   .nav-ul{
-    padding-left: 20%;
+    /* padding-left: 10%; */
     display: inline-block;
-    font-size: 12px;
+    /* font-size: 12px; */
+    /* margin-right: 20%; */
+   
+  
+    
    
   
   }
@@ -33,10 +37,13 @@
     margin-left: -15%;
   }
 
-  /* .nav-ul > .navbar-nav > .nav-item{
-    padding-right: 2%;
+  .nav-ul > .navbar-nav > .nav-item{
+    display: inline-block;
+    padding-right: 5%;
+   
+    
   
-  } */
+  }
 
 
   .nav-link{
