--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@
 
   .nav-ul > .navbar-nav > .nav-item{
     display: inline-block;
-    padding-right: 5%;
+    /* padding-right: 5%; */
    
     
   
@@ -769,7 +769,21 @@ font-family: 'Roboto', sans-serif; */
 
 
 
-@media only screen and (max-width: 1240px) and (min-width: 599px) {
+@media only screen and (max-width: 1240px) {
+  .container-fluid7{
+    width: 60%;
+    background-image: linear-gradient(to bottom right,#4AB19A, #AAF3A7);
+    
+    /* background-color: #4AB19A; */
+    padding-left: 8%;
+    padding-right: 10%;
+    /* margin-left: 15%; */
+    text-align: center;
+    padding-top: 15%;
+    margin-left: 20%;
+  
+   
+  }
   .iconsId{
     color: white;
     font-size: 60px;
@@ -786,6 +800,21 @@ font-family: 'Roboto', sans-serif; */
 
 
 @media only screen and (max-width: 600px) {
+
+  .container-fluid7{
+    width: 85%;
+    background-image: linear-gradient(to bottom right,#4AB19A, #AAF3A7);
+    
+    /* background-color: #4AB19A; */
+    padding-left: 8%;
+    padding-right: 10%;
+    /* margin-left: 15%; */
+    text-align: center;
+    padding-top: 15%;
+    margin-left: 7%;
+  
+   
+  }
   
   .icons{
     width: 30%;
