--- a/css/style.css
+++ b/css/style.css
@@ -116,13 +116,56 @@
 
 #cloud1{
   margin-left: 50%;
-  /* margin-top: -3%; */
+  animation: moveInRight 3s ease-out;
 }
+
 #cloud2{
   margin-right: 50%;
   margin-bottom: 0.2%;
   margin-top: -10%;
+  animation: moveInLeft 3s ease-in;
 }
+
+@keyframes moveInLeft{
+  0% {
+    opacity: 0.5;
+    transform: translate(-100px);
+
+  }
+  80%{
+    transform: translate(10px);
+
+  }
+
+  100%{
+    opacity: 1;
+    transform: translate(0);
+  }
+
+}
+
+@keyframes moveInRight{
+  0% {
+    opacity: 0.5;
+    transform: translate(100px);
+
+  }
+  80%{
+    transform: translate(-10px);
+
+  }
+
+  100%{
+    opacity: 1;
+    transform: translate(0);
+  }
+
+}
+
+
+
+
+
 #palace{
   /* margin-top: -6% ; */
   object-fit: contain;
@@ -135,6 +178,7 @@
 
   padding-top: 24%;
   margin-right: -5.5%;
+  animation: flag 2s ease;
 
 }
 
@@ -144,6 +188,20 @@
 
  
 }
+
+/* @keyframes flag{
+  0%{
+    opacity: 0.8;
+    transform: translate(100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+} */
+
+
+
 
 
 /* .cons{
