--- a/css/style.css
+++ b/css/style.css
@@ -23,11 +23,6 @@
   .nav-ul{
     /* padding-left: 10%; */
     display: inline-block;
-    /* font-size: 12px; */
-    /* margin-right: 20%; */
-   
-  
-    
    
   
   }
@@ -35,13 +30,13 @@
   .navbar-brand{
     /* padding-left: 10%; */
     margin-left: -15%;
+   
   }
 
   .nav-ul > .navbar-nav > .nav-item{
     display: inline-block;
     /* padding-right: 5%; */
    
-    
   
   }
 
@@ -56,6 +51,17 @@
   .container-fluid h2{
     font-size: 50px;
   }
+
+
+  #cloud1{
+    width: 15%;
+  }
+  #cloud2{
+    width: 15%;
+  }
+
+
+
   #flag1{
    
 
@@ -178,7 +184,7 @@
 
   padding-top: 24%;
   margin-right: -5.5%;
-  animation: flag 2s ease;
+  
 
 }
 
