--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,14 @@
   padding-top: 1%;
   color: #4AB19A;
   font-family: 'EB Garamond', serif;
+ 
   /* margin-bottom: -3%; */
  
 }
 
 .nav-ul{
   padding-left: 40%;
-  display: inline;
+  /* display: inline; */
   
   
  
@@ -231,10 +232,9 @@
   font-size: 48px;
   padding-top: 3%;
   color: #4AB19A;
-  font-family: 'Great Vibes', cursive;
-
-  /* font-family: 'EB Garamond', serif; */
-  font-weight: 300;
+  /* font-family: 'Great Vibes', cursive; */
+  font-family: 'EB Garamond', serif;
+  font-weight: 200;
 }
 
 #avatar{
@@ -242,6 +242,7 @@
   background-color: #F3F2F1;
   padding: 1%;
 }
+
 h3{
   font-size: 35px;
   padding-top: 3%;
@@ -286,7 +287,7 @@ h3{
 .container-fluid4{
   padding-top: 8%;
   padding-right: 8%;
-  padding-left: 5%;
+  padding-left: 10%;
   text-align: center;
   font-size: 40px;
   display: flex;
@@ -460,7 +461,65 @@ h3{
   .flex1{
     width: 100%;
     height: 30%;
-    /* background-color: lawngreen; */
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 4%;
+  
+  }
+
+  .flex1-1{
+    height: 40%;
+    width: 50%;
+    padding-bottom: 5%;
+  }
+
+ .flex1-2{
+
+    width: 100%;
+    padding: 0%;
+    /* margin-right: -40%; */
+    margin-left: -25%;
+    
+ }
+ .flex2{
+  /* height: 60%; */
+  display: flex;
+  flex-direction: column;
+  
+
+}
+.flex2-1{
+  height: 60%;
+  width: 100%;
+  margin-top: 40%;
+  margin-left: 30%;
+  text-align: center;
+  margin-left: -5%;
+  
+
+}
+
+.flex2-2{
+  height: 40%;
+  width: 58%;
+  margin-bottom: 90%;
+  margin-top: -120%; 
+  padding-left: 8%;
+  
+  /* margin-top: -95%;
+  margin-bottom: 75%; */
+
+
+}
+
+
+
+
+
+  /* .flex1{
+    width: 100%;
+    height: 30%;
+  
     display: flex;
     flex-direction: row;
     padding-bottom: 4%;
@@ -473,10 +532,10 @@ h3{
   .flex1-1 img{
     width: 25%;
    
-  }
+  } */
 
 
-  .flex1-2{
+  /* .flex1-2{
     width: 75%;
    
   }
@@ -495,14 +554,14 @@ h3{
   
   .flex2{
     height: 30%;
-    /* background-color: lightcoral; */
+  
     display: flex;
     flex-direction: row;
   
   }
+   */
   
-  
-  .flex2-1{
+  /* .flex2-1{
     width: 75%;
   
   }
@@ -527,7 +586,7 @@ h3{
   .flex2-2 img{
     width: 25%;
   }
-  
+   */
   
   
 }
@@ -651,6 +710,9 @@ h3{
     
   }
   
+
+
+  
 }
 
 
@@ -728,21 +790,41 @@ h3{
     font-size: 12px;
     padding-left: 10%;
   }
+
+  .container-fluid6 button {
+    /* margin-top: 10%;
+    margin-bottom: 10%; */
+     margin: 5%;
+     /* display: inline-block; */
+  
+    
+  }
+  .container-fluid6 button a{
+  
+    display: inline-block;
+    padding: 0% 40%;
+ 
+   
+    
+  }
+
 }
 
 
 .container-fluid6 button{
-  border-radius: 5%;
+
   padding: 1% 2% 1% 2%;
   color: white;
   background-color: #2B3D51;
   border: none;
+  
   
 }
 
 .container-fluid6 button> a{
   color: #F5F9F8;
   text-decoration: none;
+ 
 
 }
 
