--- a/css/style.css
+++ b/css/style.css
@@ -274,7 +274,7 @@
   /* font-family: 'Great Vibes', cursive; */
   /* font-family: 'EB Garamond', serif; */
 
-  /* font-family: "Helvetica Neue Light","Helvetica Neue","Lucida Grande"; */
+  font-family: "Helvetica Neue","Lucida Grande";
 
   /* font-family: brandon-grotesque,HelveticaNeue-Light,"Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif; */
   font-weight: 300;
@@ -812,8 +812,6 @@ h3{
 
 .container-fluid6 p{
   font-size: 16px;
-  
-  
 }
 
 #para{
@@ -821,6 +819,11 @@ h3{
   padding-left: 28%;
 
 }
+.container-fluid6 img{
+  border-radius: 2%;
+  box-shadow: 6px 8px 6px rgb(68, 65, 75);
+}
+
 
 @media only screen and (max-width: 600px) {
   #para{
@@ -857,14 +860,21 @@ h3{
 
 
 .container-fluid6 button{
-
-  padding: 1% 2% 1% 2%;
+  border-radius: 2.5%;
+  padding: 1% 2.5% 1% 2.5%;
   color: white;
   background-color: #2B3D51;
   border: none;
   
   
 }
+
+.container-fluid6 button:hover{
+  background-color: rgb(3, 4, 4);
+}
+
+
+
 
 .container-fluid6 button> a{
   color: #F5F9F8;
@@ -899,6 +909,13 @@ h3{
   padding: 3%;
   font-size: 20px;
   text-decoration: none;
+
+}
+
+.foot>.links:hover{
+  color: #28685A;
+  font-size: 23px;
+  font-weight: 500;
 
 }
 /* font-family: 'EB Garamond', serif;
@@ -968,7 +985,7 @@ font-family: 'Roboto', sans-serif; */
   height: 30%;
   animation: zoomIn 2s;
   transform: translateY(-30px);
-  box-shadow: 20px 10px 20px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.4);
 }
 
 @keyframes zoomIn{
